<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/events_fragment">

    <fragment
        android:id="@+id/events_fragment"
        android:name="com.emissa.apps.events.views.EventFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_event" >
        <action
            android:id="@+id/action_events_fragment_to_create_events"
            app:destination="@id/create_events" />
        <action
            android:id="@+id/action_events_fragment_to_event_details"
            app:destination="@id/event_details" />
    </fragment>

    <fragment
        android:id="@+id/create_events"
        android:name="com.emissa.apps.events.views.CreateEventFragment"
        android:label="@string/label_create_event"
        tools:layout="@layout/fragment_create_event">
        <argument
            android:name="title"
            app:argType="string" />
        <argument
            android:name="event_id"
            android:defaultValue="-1"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/event_details"
        android:name="com.emissa.apps.events.views.EventDetailsFragment"
        android:label="@string/label_event_details"
        tools:layout="@layout/fragment_event_details">
        <argument
            android:name="event_id"
            app:argType="integer" />
    </fragment>
</navigation>